examples/org.eclipse.xtext.example.domainmodel.web/src-js/org/eclipse/xtext/example/domainmodel/web/parser/DomainmodelParser.js
// $ANTLR 3.3 avr. 19, 2016 01:13:22 D:\\git\\dslforge\\examples\\org.eclipse.xtext.example.domainmodel.web\\src-js\\org\\eclipse\\xtext\\example\\domainmodel\\web\\parser\\Domainmodel.g 2016-05-13 22:38:39



var DomainmodelParser = function(input, state) {
    if (!state) {
        state = new org.antlr.runtime.RecognizerSharedState();
    }

    (function(){
    }).call(this);

    DomainmodelParser.superclass.constructor.call(this, input, state);


         

    /* @todo only create adaptor if output=AST */
    this.adaptor = new org.antlr.runtime.tree.CommonTreeAdaptor();

};

org.antlr.lang.augmentObject(DomainmodelParser, {
    EOF: -1,
    T__9: 9,
    T__10: 10,
    T__11: 11,
    T__12: 12,
    T__13: 13,
    T__14: 14,
    T__15: 15,
    T__16: 16,
    T__17: 17,
    T__18: 18,
    T__19: 19,
    T__20: 20,
    T__21: 21,
    T__22: 22,
    T__23: 23,
    T__24: 24,
    T__25: 25,
    T__26: 26,
    T__27: 27,
    ID: 4,
    STRING: 5,
    COMMENT: 6,
    WS: 7,
    INT: 8
});

(function(){
// public class variables
var EOF= -1,
    T__9= 9,
    T__10= 10,
    T__11= 11,
    T__12= 12,
    T__13= 13,
    T__14= 14,
    T__15= 15,
    T__16= 16,
    T__17= 17,
    T__18= 18,
    T__19= 19,
    T__20= 20,
    T__21= 21,
    T__22= 22,
    T__23= 23,
    T__24= 24,
    T__25= 25,
    T__26= 26,
    T__27= 27,
    ID= 4,
    STRING= 5,
    COMMENT= 6,
    WS= 7,
    INT= 8;

// public instance methods/vars
org.antlr.lang.extend(DomainmodelParser, org.antlr.runtime.Parser, {
        
    setTreeAdaptor: function(adaptor) {
        this.adaptor = adaptor;
    },
    getTreeAdaptor: function() {
        return this.adaptor;
    },

    getTokenNames: function() { return DomainmodelParser.tokenNames; },
    getGrammarFileName: function() { return "D:\\git\\dslforge\\examples\\org.eclipse.xtext.example.domainmodel.web\\src-js\\org\\eclipse\\xtext\\example\\domainmodel\\web\\parser\\Domainmodel.g"; }
});
org.antlr.lang.augmentObject(DomainmodelParser.prototype, {

    // inline static return class
    rule_DomainModel_return: (function() {
        DomainmodelParser.rule_DomainModel_return = function(){};
        org.antlr.lang.extend(DomainmodelParser.rule_DomainModel_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // D:\\git\\dslforge\\examples\\org.eclipse.xtext.example.domainmodel.web\\src-js\\org\\eclipse\\xtext\\example\\domainmodel\\web\\parser\\Domainmodel.g:20:1: rule_DomainModel : (elements+= rule_AbstractElement )* EOF ;
    // $ANTLR start "rule_DomainModel"
    rule_DomainModel: function() {
        var retval = new DomainmodelParser.rule_DomainModel_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var EOF1 = null;
        var list_elements=null;
        var elements = null;
        var EOF1_tree=null;

        try {
            // D:\\git\\dslforge\\examples\\org.eclipse.xtext.example.domainmodel.web\\src-js\\org\\eclipse\\xtext\\example\\domainmodel\\web\\parser\\Domainmodel.g:20:17: ( (elements+= rule_AbstractElement )* EOF )
            // D:\\git\\dslforge\\examples\\org.eclipse.xtext.example.domainmodel.web\\src-js\\org\\eclipse\\xtext\\example\\domainmodel\\web\\parser\\Domainmodel.g:21:2: (elements+= rule_AbstractElement )* EOF
            root_0 = this.adaptor.nil();

            // D:\\git\\dslforge\\examples\\org.eclipse.xtext.example.domainmodel.web\\src-js\\org\\eclipse\\xtext\\example\\domainmodel\\web\\parser\\Domainmodel.g:21:10: (elements+= rule_AbstractElement )*
            loop1:
            do {
                var alt1=2;
                var LA1_0 = this.input.LA(1);

                if ( ((LA1_0>=9 && LA1_0<=10)||(LA1_0>=13 && LA1_0<=14)) ) {
                    alt1=1;
                }


                switch (alt1) {
                case 1 :
                    // D:\\git\\dslforge\\examples\\org.eclipse.xtext.example.domainmodel.web\\src-js\\org\\eclipse\\xtext\\example\\domainmodel\\web\\parser\\Domainmodel.g:21:10: elements+= rule_AbstractElement
                    this.pushFollow(DomainmodelParser.FOLLOW_rule_AbstractElement_in_rule_DomainModel62);
                    elements=this.rule_AbstractElement();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, elements.getTree());
                    if (org.antlr.lang.isNull(list_elements)) list_elements = [];
                    list_elements.push(elements.getTree());



                    break;

                default :
                    break loop1;
                }
            } while (true);

            EOF1=this.match(this.input,EOF,DomainmodelParser.FOLLOW_EOF_in_rule_DomainModel65); 



            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    rule_AbstractElement_return: (function() {
        DomainmodelParser.rule_AbstractElement_return = function(){};
        org.antlr.lang.extend(DomainmodelParser.rule_AbstractElement_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // D:\\git\\dslforge\\examples\\org.eclipse.xtext.example.domainmodel.web\\src-js\\org\\eclipse\\xtext\\example\\domainmodel\\web\\parser\\Domainmodel.g:26:1: rule_AbstractElement : ( rule_PackageDeclaration | rule_Type | rule_Import );
    // $ANTLR start "rule_AbstractElement"
    rule_AbstractElement: function() {
        var retval = new DomainmodelParser.rule_AbstractElement_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

         var rule_PackageDeclaration2 = null;
         var rule_Type3 = null;
         var rule_Import4 = null;


        try {
            // D:\\git\\dslforge\\examples\\org.eclipse.xtext.example.domainmodel.web\\src-js\\org\\eclipse\\xtext\\example\\domainmodel\\web\\parser\\Domainmodel.g:26:21: ( rule_PackageDeclaration | rule_Type | rule_Import )
            var alt2=3;
            switch ( this.input.LA(1) ) {
            case 10:
                alt2=1;
                break;
            case 13:
            case 14:
                alt2=2;
                break;
            case 9:
                alt2=3;
                break;
            default:
                var nvae =
                    new org.antlr.runtime.NoViableAltException("", 2, 0, this.input);

                throw nvae;
            }

            switch (alt2) {
                case 1 :
                    // D:\\git\\dslforge\\examples\\org.eclipse.xtext.example.domainmodel.web\\src-js\\org\\eclipse\\xtext\\example\\domainmodel\\web\\parser\\Domainmodel.g:27:2: rule_PackageDeclaration
                    root_0 = this.adaptor.nil();

                    this.pushFollow(DomainmodelParser.FOLLOW_rule_PackageDeclaration_in_rule_AbstractElement77);
                    rule_PackageDeclaration2=this.rule_PackageDeclaration();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, rule_PackageDeclaration2.getTree());


                    break;
                case 2 :
                    // D:\\git\\dslforge\\examples\\org.eclipse.xtext.example.domainmodel.web\\src-js\\org\\eclipse\\xtext\\example\\domainmodel\\web\\parser\\Domainmodel.g:27:28: rule_Type
                    root_0 = this.adaptor.nil();

                    this.pushFollow(DomainmodelParser.FOLLOW_rule_Type_in_rule_AbstractElement81);
                    rule_Type3=this.rule_Type();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, rule_Type3.getTree());


                    break;
                case 3 :
                    // D:\\git\\dslforge\\examples\\org.eclipse.xtext.example.domainmodel.web\\src-js\\org\\eclipse\\xtext\\example\\domainmodel\\web\\parser\\Domainmodel.g:27:40: rule_Import
                    root_0 = this.adaptor.nil();

                    this.pushFollow(DomainmodelParser.FOLLOW_rule_Import_in_rule_AbstractElement85);
                    rule_Import4=this.rule_Import();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, rule_Import4.getTree());


                    break;

            }
            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    rule_Import_return: (function() {
        DomainmodelParser.rule_Import_return = function(){};
        org.antlr.lang.extend(DomainmodelParser.rule_Import_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // D:\\git\\dslforge\\examples\\org.eclipse.xtext.example.domainmodel.web\\src-js\\org\\eclipse\\xtext\\example\\domainmodel\\web\\parser\\Domainmodel.g:32:1: rule_Import : 'import' importednamespace= rule_QualifiedNameWithWildcard ;
    // $ANTLR start "rule_Import"
    rule_Import: function() {
        var retval = new DomainmodelParser.rule_Import_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var string_literal5 = null;
         var importednamespace = null;

        var string_literal5_tree=null;

        try {
            // D:\\git\\dslforge\\examples\\org.eclipse.xtext.example.domainmodel.web\\src-js\\org\\eclipse\\xtext\\example\\domainmodel\\web\\parser\\Domainmodel.g:32:12: ( 'import' importednamespace= rule_QualifiedNameWithWildcard )
            // D:\\git\\dslforge\\examples\\org.eclipse.xtext.example.domainmodel.web\\src-js\\org\\eclipse\\xtext\\example\\domainmodel\\web\\parser\\Domainmodel.g:33:2: 'import' importednamespace= rule_QualifiedNameWithWildcard
            root_0 = this.adaptor.nil();

            string_literal5=this.match(this.input,9,DomainmodelParser.FOLLOW_9_in_rule_Import96); 
            string_literal5_tree = this.adaptor.create(string_literal5);
            this.adaptor.addChild(root_0, string_literal5_tree);

            this.pushFollow(DomainmodelParser.FOLLOW_rule_QualifiedNameWithWildcard_in_rule_Import100);
            importednamespace=this.rule_QualifiedNameWithWildcard();

            this.state._fsp--;

            this.adaptor.addChild(root_0, importednamespace.getTree());



            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    rule_PackageDeclaration_return: (function() {
        DomainmodelParser.rule_PackageDeclaration_return = function(){};
        org.antlr.lang.extend(DomainmodelParser.rule_PackageDeclaration_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // D:\\git\\dslforge\\examples\\org.eclipse.xtext.example.domainmodel.web\\src-js\\org\\eclipse\\xtext\\example\\domainmodel\\web\\parser\\Domainmodel.g:38:1: rule_PackageDeclaration : 'package' name= rule_QualifiedName '{' (elements+= rule_AbstractElement )* '}' ;
    // $ANTLR start "rule_PackageDeclaration"
    rule_PackageDeclaration: function() {
        var retval = new DomainmodelParser.rule_PackageDeclaration_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var string_literal6 = null;
        var char_literal7 = null;
        var char_literal8 = null;
        var list_elements=null;
         var name = null;
        var elements = null;
        var string_literal6_tree=null;
        var char_literal7_tree=null;
        var char_literal8_tree=null;

        try {
            // D:\\git\\dslforge\\examples\\org.eclipse.xtext.example.domainmodel.web\\src-js\\org\\eclipse\\xtext\\example\\domainmodel\\web\\parser\\Domainmodel.g:38:24: ( 'package' name= rule_QualifiedName '{' (elements+= rule_AbstractElement )* '}' )
            // D:\\git\\dslforge\\examples\\org.eclipse.xtext.example.domainmodel.web\\src-js\\org\\eclipse\\xtext\\example\\domainmodel\\web\\parser\\Domainmodel.g:39:2: 'package' name= rule_QualifiedName '{' (elements+= rule_AbstractElement )* '}'
            root_0 = this.adaptor.nil();

            string_literal6=this.match(this.input,10,DomainmodelParser.FOLLOW_10_in_rule_PackageDeclaration111); 
            string_literal6_tree = this.adaptor.create(string_literal6);
            this.adaptor.addChild(root_0, string_literal6_tree);

            this.pushFollow(DomainmodelParser.FOLLOW_rule_QualifiedName_in_rule_PackageDeclaration115);
            name=this.rule_QualifiedName();

            this.state._fsp--;

            this.adaptor.addChild(root_0, name.getTree());
            char_literal7=this.match(this.input,11,DomainmodelParser.FOLLOW_11_in_rule_PackageDeclaration117); 
            char_literal7_tree = this.adaptor.create(char_literal7);
            this.adaptor.addChild(root_0, char_literal7_tree);

            // D:\\git\\dslforge\\examples\\org.eclipse.xtext.example.domainmodel.web\\src-js\\org\\eclipse\\xtext\\example\\domainmodel\\web\\parser\\Domainmodel.g:40:11: (elements+= rule_AbstractElement )*
            loop3:
            do {
                var alt3=2;
                var LA3_0 = this.input.LA(1);

                if ( ((LA3_0>=9 && LA3_0<=10)||(LA3_0>=13 && LA3_0<=14)) ) {
                    alt3=1;
                }


                switch (alt3) {
                case 1 :
                    // D:\\git\\dslforge\\examples\\org.eclipse.xtext.example.domainmodel.web\\src-js\\org\\eclipse\\xtext\\example\\domainmodel\\web\\parser\\Domainmodel.g:40:11: elements+= rule_AbstractElement
                    this.pushFollow(DomainmodelParser.FOLLOW_rule_AbstractElement_in_rule_PackageDeclaration123);
                    elements=this.rule_AbstractElement();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, elements.getTree());
                    if (org.antlr.lang.isNull(list_elements)) list_elements = [];
                    list_elements.push(elements.getTree());



                    break;

                default :
                    break loop3;
                }
            } while (true);

            char_literal8=this.match(this.input,12,DomainmodelParser.FOLLOW_12_in_rule_PackageDeclaration127); 
            char_literal8_tree = this.adaptor.create(char_literal8);
            this.adaptor.addChild(root_0, char_literal8_tree);




            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    rule_Type_return: (function() {
        DomainmodelParser.rule_Type_return = function(){};
        org.antlr.lang.extend(DomainmodelParser.rule_Type_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // D:\\git\\dslforge\\examples\\org.eclipse.xtext.example.domainmodel.web\\src-js\\org\\eclipse\\xtext\\example\\domainmodel\\web\\parser\\Domainmodel.g:46:1: rule_Type : ( rule_Entity | rule_DataType );
    // $ANTLR start "rule_Type"
    rule_Type: function() {
        var retval = new DomainmodelParser.rule_Type_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

         var rule_Entity9 = null;
         var rule_DataType10 = null;


        try {
            // D:\\git\\dslforge\\examples\\org.eclipse.xtext.example.domainmodel.web\\src-js\\org\\eclipse\\xtext\\example\\domainmodel\\web\\parser\\Domainmodel.g:46:10: ( rule_Entity | rule_DataType )
            var alt4=2;
            var LA4_0 = this.input.LA(1);

            if ( (LA4_0==14) ) {
                alt4=1;
            }
            else if ( (LA4_0==13) ) {
                alt4=2;
            }
            else {
                var nvae =
                    new org.antlr.runtime.NoViableAltException("", 4, 0, this.input);

                throw nvae;
            }
            switch (alt4) {
                case 1 :
                    // D:\\git\\dslforge\\examples\\org.eclipse.xtext.example.domainmodel.web\\src-js\\org\\eclipse\\xtext\\example\\domainmodel\\web\\parser\\Domainmodel.g:47:2: rule_Entity
                    root_0 = this.adaptor.nil();

                    this.pushFollow(DomainmodelParser.FOLLOW_rule_Entity_in_rule_Type138);
                    rule_Entity9=this.rule_Entity();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, rule_Entity9.getTree());


                    break;
                case 2 :
                    // D:\\git\\dslforge\\examples\\org.eclipse.xtext.example.domainmodel.web\\src-js\\org\\eclipse\\xtext\\example\\domainmodel\\web\\parser\\Domainmodel.g:47:16: rule_DataType
                    root_0 = this.adaptor.nil();

                    this.pushFollow(DomainmodelParser.FOLLOW_rule_DataType_in_rule_Type142);
                    rule_DataType10=this.rule_DataType();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, rule_DataType10.getTree());


                    break;

            }
            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    rule_DataType_return: (function() {
        DomainmodelParser.rule_DataType_return = function(){};
        org.antlr.lang.extend(DomainmodelParser.rule_DataType_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // D:\\git\\dslforge\\examples\\org.eclipse.xtext.example.domainmodel.web\\src-js\\org\\eclipse\\xtext\\example\\domainmodel\\web\\parser\\Domainmodel.g:52:1: rule_DataType : 'datatype' name= ID ;
    // $ANTLR start "rule_DataType"
    rule_DataType: function() {
        var retval = new DomainmodelParser.rule_DataType_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var name = null;
        var string_literal11 = null;

        var name_tree=null;
        var string_literal11_tree=null;

        try {
            // D:\\git\\dslforge\\examples\\org.eclipse.xtext.example.domainmodel.web\\src-js\\org\\eclipse\\xtext\\example\\domainmodel\\web\\parser\\Domainmodel.g:52:14: ( 'datatype' name= ID )
            // D:\\git\\dslforge\\examples\\org.eclipse.xtext.example.domainmodel.web\\src-js\\org\\eclipse\\xtext\\example\\domainmodel\\web\\parser\\Domainmodel.g:53:2: 'datatype' name= ID
            root_0 = this.adaptor.nil();

            string_literal11=this.match(this.input,13,DomainmodelParser.FOLLOW_13_in_rule_DataType153); 
            string_literal11_tree = this.adaptor.create(string_literal11);
            this.adaptor.addChild(root_0, string_literal11_tree);

            name=this.match(this.input,ID,DomainmodelParser.FOLLOW_ID_in_rule_DataType157); 
            name_tree = this.adaptor.create(name);
            this.adaptor.addChild(root_0, name_tree);




            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    rule_Entity_return: (function() {
        DomainmodelParser.rule_Entity_return = function(){};
        org.antlr.lang.extend(DomainmodelParser.rule_Entity_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // D:\\git\\dslforge\\examples\\org.eclipse.xtext.example.domainmodel.web\\src-js\\org\\eclipse\\xtext\\example\\domainmodel\\web\\parser\\Domainmodel.g:58:1: rule_Entity : 'entity' name= ID ( 'extends' supertype= ID )? '{' (features+= rule_Feature )* '}' ;
    // $ANTLR start "rule_Entity"
    rule_Entity: function() {
        var retval = new DomainmodelParser.rule_Entity_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var name = null;
        var supertype = null;
        var string_literal12 = null;
        var string_literal13 = null;
        var char_literal14 = null;
        var char_literal15 = null;
        var list_features=null;
        var features = null;
        var name_tree=null;
        var supertype_tree=null;
        var string_literal12_tree=null;
        var string_literal13_tree=null;
        var char_literal14_tree=null;
        var char_literal15_tree=null;

        try {
            // D:\\git\\dslforge\\examples\\org.eclipse.xtext.example.domainmodel.web\\src-js\\org\\eclipse\\xtext\\example\\domainmodel\\web\\parser\\Domainmodel.g:58:12: ( 'entity' name= ID ( 'extends' supertype= ID )? '{' (features+= rule_Feature )* '}' )
            // D:\\git\\dslforge\\examples\\org.eclipse.xtext.example.domainmodel.web\\src-js\\org\\eclipse\\xtext\\example\\domainmodel\\web\\parser\\Domainmodel.g:59:2: 'entity' name= ID ( 'extends' supertype= ID )? '{' (features+= rule_Feature )* '}'
            root_0 = this.adaptor.nil();

            string_literal12=this.match(this.input,14,DomainmodelParser.FOLLOW_14_in_rule_Entity168); 
            string_literal12_tree = this.adaptor.create(string_literal12);
            this.adaptor.addChild(root_0, string_literal12_tree);

            name=this.match(this.input,ID,DomainmodelParser.FOLLOW_ID_in_rule_Entity172); 
            name_tree = this.adaptor.create(name);
            this.adaptor.addChild(root_0, name_tree);

            // D:\\git\\dslforge\\examples\\org.eclipse.xtext.example.domainmodel.web\\src-js\\org\\eclipse\\xtext\\example\\domainmodel\\web\\parser\\Domainmodel.g:59:19: ( 'extends' supertype= ID )?
            var alt5=2;
            var LA5_0 = this.input.LA(1);

            if ( (LA5_0==15) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // D:\\git\\dslforge\\examples\\org.eclipse.xtext.example.domainmodel.web\\src-js\\org\\eclipse\\xtext\\example\\domainmodel\\web\\parser\\Domainmodel.g:59:20: 'extends' supertype= ID
                    string_literal13=this.match(this.input,15,DomainmodelParser.FOLLOW_15_in_rule_Entity175); 
                    string_literal13_tree = this.adaptor.create(string_literal13);
                    this.adaptor.addChild(root_0, string_literal13_tree);

                    supertype=this.match(this.input,ID,DomainmodelParser.FOLLOW_ID_in_rule_Entity179); 
                    supertype_tree = this.adaptor.create(supertype);
                    this.adaptor.addChild(root_0, supertype_tree);



                    break;

            }

            char_literal14=this.match(this.input,11,DomainmodelParser.FOLLOW_11_in_rule_Entity183); 
            char_literal14_tree = this.adaptor.create(char_literal14);
            this.adaptor.addChild(root_0, char_literal14_tree);

            // D:\\git\\dslforge\\examples\\org.eclipse.xtext.example.domainmodel.web\\src-js\\org\\eclipse\\xtext\\example\\domainmodel\\web\\parser\\Domainmodel.g:60:11: (features+= rule_Feature )*
            loop6:
            do {
                var alt6=2;
                var LA6_0 = this.input.LA(1);

                if ( (LA6_0==ID||LA6_0==17||LA6_0==19||(LA6_0>=25 && LA6_0<=27)) ) {
                    alt6=1;
                }


                switch (alt6) {
                case 1 :
                    // D:\\git\\dslforge\\examples\\org.eclipse.xtext.example.domainmodel.web\\src-js\\org\\eclipse\\xtext\\example\\domainmodel\\web\\parser\\Domainmodel.g:60:11: features+= rule_Feature
                    this.pushFollow(DomainmodelParser.FOLLOW_rule_Feature_in_rule_Entity189);
                    features=this.rule_Feature();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, features.getTree());
                    if (org.antlr.lang.isNull(list_features)) list_features = [];
                    list_features.push(features.getTree());



                    break;

                default :
                    break loop6;
                }
            } while (true);

            char_literal15=this.match(this.input,12,DomainmodelParser.FOLLOW_12_in_rule_Entity193); 
            char_literal15_tree = this.adaptor.create(char_literal15);
            this.adaptor.addChild(root_0, char_literal15_tree);




            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    rule_Feature_return: (function() {
        DomainmodelParser.rule_Feature_return = function(){};
        org.antlr.lang.extend(DomainmodelParser.rule_Feature_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // D:\\git\\dslforge\\examples\\org.eclipse.xtext.example.domainmodel.web\\src-js\\org\\eclipse\\xtext\\example\\domainmodel\\web\\parser\\Domainmodel.g:66:1: rule_Feature : ( rule_StructuralFeature | rule_Operation );
    // $ANTLR start "rule_Feature"
    rule_Feature: function() {
        var retval = new DomainmodelParser.rule_Feature_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

         var rule_StructuralFeature16 = null;
         var rule_Operation17 = null;


        try {
            // D:\\git\\dslforge\\examples\\org.eclipse.xtext.example.domainmodel.web\\src-js\\org\\eclipse\\xtext\\example\\domainmodel\\web\\parser\\Domainmodel.g:66:13: ( rule_StructuralFeature | rule_Operation )
            var alt7=2;
            var LA7_0 = this.input.LA(1);

            if ( (LA7_0==ID||LA7_0==17) ) {
                alt7=1;
            }
            else if ( (LA7_0==19||(LA7_0>=25 && LA7_0<=27)) ) {
                alt7=2;
            }
            else {
                var nvae =
                    new org.antlr.runtime.NoViableAltException("", 7, 0, this.input);

                throw nvae;
            }
            switch (alt7) {
                case 1 :
                    // D:\\git\\dslforge\\examples\\org.eclipse.xtext.example.domainmodel.web\\src-js\\org\\eclipse\\xtext\\example\\domainmodel\\web\\parser\\Domainmodel.g:67:2: rule_StructuralFeature
                    root_0 = this.adaptor.nil();

                    this.pushFollow(DomainmodelParser.FOLLOW_rule_StructuralFeature_in_rule_Feature204);
                    rule_StructuralFeature16=this.rule_StructuralFeature();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, rule_StructuralFeature16.getTree());


                    break;
                case 2 :
                    // D:\\git\\dslforge\\examples\\org.eclipse.xtext.example.domainmodel.web\\src-js\\org\\eclipse\\xtext\\example\\domainmodel\\web\\parser\\Domainmodel.g:67:27: rule_Operation
                    root_0 = this.adaptor.nil();

                    this.pushFollow(DomainmodelParser.FOLLOW_rule_Operation_in_rule_Feature208);
                    rule_Operation17=this.rule_Operation();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, rule_Operation17.getTree());


                    break;

            }
            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    rule_StructuralFeature_return: (function() {
        DomainmodelParser.rule_StructuralFeature_return = function(){};
        org.antlr.lang.extend(DomainmodelParser.rule_StructuralFeature_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // D:\\git\\dslforge\\examples\\org.eclipse.xtext.example.domainmodel.web\\src-js\\org\\eclipse\\xtext\\example\\domainmodel\\web\\parser\\Domainmodel.g:72:1: rule_StructuralFeature : ( rule_Attribute | rule_Reference );
    // $ANTLR start "rule_StructuralFeature"
    rule_StructuralFeature: function() {
        var retval = new DomainmodelParser.rule_StructuralFeature_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

         var rule_Attribute18 = null;
         var rule_Reference19 = null;

